{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "dd0de2d4-6e6d-4a5e-80bb-aa7dd81f63e2",
            "actions": [
                {
                    "name": "DirectionalThrusters",
                    "type": "Value",
                    "id": "3fa23ed1-5c0e-45b1-854e-cbe1bdc5c8e2",
                    "expectedControlType": "Dpad",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TakeoffThruster",
                    "type": "Button",
                    "id": "bf622df8-46af-43aa-a236-655a12e113df",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "490df92f-4731-4d65-8594-ba37e4c687c7",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DirectionalThrusters",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "a6a9984d-befa-4256-b7a3-f646c378b07c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DirectionalThrusters",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f5bf89d6-3441-4e6c-b91c-bfb89ba278cc",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DirectionalThrusters",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "cd8b04b0-80fe-4583-9bf5-e2fe3d55c2b7",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DirectionalThrusters",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "fa99d263-e1b1-455d-b0fa-4f2bea6e06fe",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DirectionalThrusters",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0e618983-378a-4859-9d42-8de2a77a144f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TakeoffThruster",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}